--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
             padding-bottom: 2.5rem;
             /* Footer height */
         }
+        .container-accordion{
+            margin-bottom: 30px;
+        }
     </style>
 </head>
 
@@ -144,7 +147,7 @@
 
     <div id="page-container">
         <div id="content-wrap">
-            <div class="container">
+            <div class="container container-accordion">
                 <div class="accordion" id="accordionPanelsStayOpenExample"></div>
             </div>
         </div>
